2007-02-28  Djihed Afifi  <djihed@gmail.com>

	* gnome-modules.xml.in : mark gnome-2-18 packages string frozen.
	* releases.xml.in : mark gnome-2-18 string frozen.
	* translation-teams.xml.in : Add description for Arabic team.
	* templates/language-release.tmpl : Marked string for translation.
	* templates/list-languages.tmpl:
	* templates/list-modules.tmpl:
	* templates/list-releases.tmpl:
	* templates/list-teams.tmpl:
	* templates/module.tmpl:
	* templates/people.tmpl:
	* templates/person.tmpl:
	* templates/release.tmpl:
	* templates/show-stats.tmpl:
	* templates/team.tmpl: Add condition to include rtl styles. 

2007-02-25  Kjartan Maraas  <kmaraas@gnome.org>

	* translation-teams.xml.in: Remove obsolete norwegian entry.

2007-02-17  David Lodge <dave@cirt.net>

	* gnome-modules.xml.in: 
	* releases.xml.in: Removed printman as it is now archived

2007-02-07  Danilo Šegan  <danilo@gnome.org>

	* gnome-modules.xml.in:
	* releases.xml.in: Branch Sabayon for 2.18.

2007-02-05  David Lodge <dave@cirt.net>

	* templates/list-languages.tmpl:
	* templates/list-modules.tmpl:
	* templates/list-releases.tmpl:
	* templates/list-teams.tmpl:
	* templates/module.tmpl:
	* templates/people.tmpl:
	* templates/person.tmpl:
	* templates/release.tmpl:
	* templates/show-stats.tmpl:
	* templates/team.tmpl: Continues XHTML validity (add Doctype, codepage remove center and replace with div)

2007-02-06  Danilo Šegan  <danilo@gnome.org>

	* people.xml.in: Added Ihar, Belarusian coordinator.
	* translation-teams.xml.in: Update Belarusian coordinator.

2007-02-06  Danilo Šegan  <danilo@gnome.org>

	* translation-teams.xml.in: Add Belarusian Latin under Belarusian team.

2007-02-05  David Lodge <dave@cirt.net>

	* templates/language-release.tmpl: Started making XHTML valid

2007-02-05  David Lodge <dave@cirt.net>

	* data/main.css: Cleared up remaining warnings, added mainpage class
	* templates/index.tmpl: Made XHTML valid

2007-02-05  David Lodge <dave@cirt.net>
