@@ -367,9 +367,6 @@
   <module id="monster-masher">
     <branch id="HEAD"/>
   </module>
-  <module id="red-carpet">
-    <branch id="HEAD"/>
-  </module>
   <module id="gnome-icon-theme">
     <branch id="HEAD"/>
     <branch id="gnome-2-14" stringfrozen="true"/>
@@ -427,16 +424,10 @@
   <module id="gtetrinet">
     <branch id="HEAD"/>
   </module>
-  <module id="rmm-utils">
-    <branch id="HEAD"/>
-  </module>
   <module id="nautilus-media">
     <branch id="HEAD"/>
   </module>
   <module id="nautilus-rpm">
-    <branch id="HEAD"/>
-  </module>
-  <module id="libgnomesu">
     <branch id="HEAD"/>
   </module>
   <module id="gnome-blog">
@@ -446,9 +437,6 @@
     <branch id="HEAD" stringfrozen="true"/>
     <branch id="gnome-2-14" stringfrozen="true"/>
     <branch id="gnome-2-16" stringfrozen="true"/>
-  </module>
-  <module id="notifier">
-    <branch id="HEAD"/>
   </module>
   <module id="orca">
     <branch id="HEAD" stringfrozen="true"/>
@@ -460,9 +448,6 @@
   <module id="vino">
     <branch id="HEAD"/>
     <branch id="gnome-2-16" stringfrozen="true"/>
-  </module>
-  <module id="update-manager">
-    <branch id="HEAD"/>
   </module>
   <module id="gtkhtml">
     <branch id="HEAD"/>
@@ -483,9 +468,6 @@
     <branch id="HEAD"/>
   </module>
   <module id="marlin">
-    <branch id="HEAD"/>
-  </module>
-  <module id="gnome-pim">
     <branch id="HEAD"/>
   </module>
   <module id="silky">
@@ -739,9 +721,6 @@
   <module id="memprof">
     <branch id="HEAD"/>
   </module>
-  <module id="battfink">
-    <branch id="HEAD"/>
-  </module>
   <module id="gnome-spell">
     <branch id="HEAD"/>
   </module>
@@ -816,16 +795,10 @@
   <module id="pybliographer">
     <branch id="v_1_0_x"/>
   </module>
-  <module id="gnome-menu-editor">
-    <branch id="HEAD"/>
-  </module>
   <module id="gnome-mag">
     <branch id="HEAD"/>
     <branch id="gnome-2-14" stringfrozen="true"/>
     <branch id="gnome-2-16" stringfrozen="true"/>
-  </module>
-  <module id="netapplet">
-    <branch id="HEAD"/>
   </module>
   <module id="webeyes">
     <branch id="HEAD"/>
@@ -987,9 +960,6 @@
     <branch id="HEAD"/>
   </module>
   <module id="istanbul">
-    <branch id="HEAD"/>
-  </module>
-  <module id="jamboree">
     <branch id="HEAD"/>
   </module>
   <module id="gnome-network">
@@ -1221,9 +1191,6 @@
     <branch id="HEAD"/>
   </module>
   <module id="atomato">
-    <branch id="HEAD"/>
-  </module>
-  <module id="slab">
     <branch id="HEAD"/>
   </module>
   <module id="brasero">
