@@ -127,7 +127,6 @@
     <module id="atomix"/>
     <module id="bakery"/>
     <module id="banshee"/>
-    <module id="battfink"/>
     <module id="beagle"/>
     <module id="beast"/>
     <module id="blam"/>
@@ -172,14 +171,12 @@
     <module id="gnome-glossary"/>
     <module id="gnome-hello"/>
     <module id="gnome-jabber"/>
-    <module id="gnome-menu-editor"/>
     <module id="gnome-mount"/>
     <module id="gnome-mud"/>
     <module id="gnome-network"/>
     <module id="gnome-office"/>
     <module id="gnome-pilot"/>
     <module id="gnome-pilot-conduits"/>
-    <module id="gnome-pim"/>
     <module id="gnome-pkgview"/>
     <module id="gnome-schedule"/>
     <module id="gnome-sharing"/>
@@ -199,12 +196,10 @@
     <module id="gwget"/>
     <module id="gyrus"/>
     <module id="istanbul"/>
-    <module id="jamboree"/>
     <module id="jumpnbumpmenu"/>
     <module id="libgircclient"/>
     <module id="libgnetwork"/>
     <module id="libgnomecups"/>
-    <module id="libgnomesu"/>
     <module id="libmimedir"/>
     <module id="lsr"/>
     <module id="marlin"/>
@@ -224,8 +219,6 @@
     <module id="nautilus-rpm"/>
     <module id="nautilus-sendto"/>
     <module id="nautilus-vcs"/>
-    <module id="netapplet"/>
-    <module id="notifier"/>
     <module id="ontv"/>
     <module id="ooo-build"/>
     <module id="optimystic"/>
@@ -233,18 +226,14 @@
     <module id="pitivi"/>
     <module id="pybliographer" branch="v_1_0_x"/>
     <module id="quick-lounge-applet"/>
-    <module id="red-carpet"/>
     <module id="resapplet"/>
     <module id="rhythmbox"/>
-    <module id="rmm-utils"/>
     <module id="sawfish"/>
     <module id="scaffold"/>
     <module id="silky"/>
-    <module id="slab"/>
     <module id="sodipodi"/>
     <module id="straw"/>
     <module id="uf-view"/>
-    <module id="update-manager"/>
     <module id="webeyes"/>
     <module id="gnome-main-menu"/>
   </release>
