@@ -1,3 +1,11 @@
+2007-03-01  Claude Paroz  <claude@2xlibre.net>
+
+	* gnome-modules.xml.in:
+	* releases.xml.in: Removed old modules (red-carpet, rmm-utils,
+	libgnomesu, notifier, update-manager, gnome-pim, battfink,
+	gnome-menu-editor, netapplet, jamboree, slab).
+	Fixes bug #405493.
+	
 2007-02-28  Djihed Afifi  <djihed@gmail.com>
 
 	* gnome-modules.xml.in : mark gnome-2-18 packages string frozen.
